# SkinPilot

./: .gitignore  Dockerfile  README.md  TODO  csgo.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  sample.yaml  stable.py  test.html  tst.py
.github/workflows/: main.yml
data/: buff163_sample.csv  buff_api_key.csv  cs_items_buff163.csv  cs_items_float_ranges.csv  cs_items_items.csv  csgo_items.db  example_buff_resp  rare_patterns.csv  sample.csv  wears.csv
data/skin_data/: filtered_skin_data.yaml  full_names.json
db_utils/: buff_test.py  postgres.py
helpers/: buff163_scraper.py  buff_test.py  create_db.py  generate_csgo_item_yaml.py  generate_list_of_items.py  generate_sample.py  new_create_db.py  postgres.py  unique.py
src/: bot.py
src/cogs/: admin.py  csgo.py  csgo_embed.py  display_testing.py  music.py  pricecheck.py  simple.py  tts.py
src/models/: buff163.py  float_ranges.py  item.py
src/skin_data/: skin_data.json
src/utils/: buff163_utils.py
test_cogs/: csgo.py  csgo_embed.py  simple.py
