[tool.poetry]
name = "SkinPilot"
version = "0.1.0"
description = "SkinPilot Discord Bot"
authors = ["ayricky <marianoricardo97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = {extras = ["voice"], version = "^2.3.1"}
pandas = "^2.0.3"
psycopg2-binary = "^2.9.6"
redis = "^2.0.16"
requests = "^2.31.0"
SQLAlchemy = "^2.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[flake8]
ignore = ['E501']
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist"
]